--- a/muddery/web/webclient/webclient/css/combat_result.css
+++ b/muddery/web/webclient/webclient/css/combat_result.css
@@ -1,8 +1,8 @@
 
-#header {
+#combat_result_header {
     text-align: center;
 }
 
-#buttons {
+#combat_result_buttons {
     text-align: center;
 }
