--- a/muddery/web/webclient/webclient/css/object.css
+++ b/muddery/web/webclient/webclient/css/object.css
@@ -1,13 +1,13 @@
 
-#div_icon {
+#object_div_icon {
     text-align: center;
 }
 
-#img_icon {
+#object_img_icon {
 	width: 40px;
 	height: 40px;
 }
 
-#popup_footer {
+#object_popup_footer {
     text-align: center;
 }
