--- a/muddery/web/webclient/webclient/css/dialogue.css
+++ b/muddery/web/webclient/webclient/css/dialogue.css
@@ -1,13 +1,13 @@
 
-#div_icon {
+#dlg_div_icon {
     text-align: center;
 }
 
-#img_icon {
+#dlg_img_icon {
 	width: 40px;
 	height: 40px;
 }
 
-#body {
+#dialogue_body {
     min-height: 80px;
 }
