--- a/muddery/web/webclient/webclient/views/get_objects.html
+++ b/muddery/web/webclient/webclient/views/get_objects.html
@@ -1,47 +1,27 @@
-<!DOCTYPE html>
-<html lang="en-us">
-    <head>
-        <meta name="viewport" content="width=device-width, initial-scale=1.0, maximun-scale=1.0, user-scalable=no" />
-        <meta charset="utf-8" />
-
-        <!--CSS style sheet -->
-        <link rel="stylesheet" type="text/css" media="screen" href="../libs/bootstrap.min.css" />
-        <link rel="stylesheet" type="text/css" media="screen" href="../css/webclient.css" />
-        <link rel="stylesheet" type="text/css" media="screen" href="../css/get_objects.css" />
-    </head>
-    <body>
-        <div class="modal-header">
-            <button type="button" id="close_box" class="close">×</button>
-            <h4 id="popup_header" class="modal-title">Get Objects</h4>
-        </div>
-        <div class="modal-body">
-            <div id="accepted">
-            	<div id="view_get_objects">Get Objects: </div>
-            	<div id="accepted_list">
-	                <p class="template">
-	                	<span class="name"></span>: <span class="info"></span>
-	                </p>
-	            </div>
-            </div>
-            <div id="rejected">
-            	<div id="view_rejected">Can Not Get: </div>
-            	<div id="rejected_list">
-	                <p class="template">
-		                <span class="name"></span>: <span class="info"></span>
-	                </p>
-	            </div>
-            </div>
-        </div>
-        <div id="popup_footer" class="modal-footer">
-            <center id="button_content">
-                <button id="button_ok" type="button" class="btn btn-default">OK</button>
-            </center>
-        </div>
-        
-        <script src="../libs/jquery-3.2.1.min.js" defer="defer" type="text/javascript" charset="utf-8"></script>
-        <script src="../controllers/base_controller.js" defer="defer" type="text/javascript" charset="utf-8"></script>
-        <script src="../controllers/muddery_get_objects.js" defer="defer" type="text/javascript" charset="utf-8"></script>
-        <script src="../client/frames.js" defer="defer" type="text/javascript" charset="utf-8"></script>
-        <script src="../client/importer.js" defer="defer" type="text/javascript" charset="utf-8"></script>
-    </body>
-</html>
+<div class="modal-header">
+	<button type="button" id="get_obj_close_box" class="close">×</button>
+	<h4 id="get_obj_popup_header" class="modal-title">Get Objects</h4>
+</div>
+<div class="modal-body">
+	<div id="get_obj_accepted">
+		<div id="get_obj_view_get_objects">Get Objects: </div>
+		<div id="get_obj_accepted_list">
+			<p class="template">
+				<span class="name"></span>: <span class="info"></span>
+			</p>
+		</div>
+	</div>
+	<div id="get_obj_rejected">
+		<div id="get_obj_view_rejected">Can Not Get: </div>
+		<div id="get_obj_rejected_list">
+			<p class="template">
+				<span class="name"></span>: <span class="info"></span>
+			</p>
+		</div>
+	</div>
+</div>
+<div id="get_obj_popup_footer" class="modal-footer">
+	<center id="get_obj_button_content">
+		<button id="get_obj_button_ok" type="button" class="btn btn-default">OK</button>
+	</center>
+</div>
