--- a/muddery/web/webclient/webclient/views/goods.html
+++ b/muddery/web/webclient/webclient/views/goods.html
@@ -1,41 +1,21 @@
-<!DOCTYPE html>
-<html lang="en-us">
-    <head>
-        <meta name="viewport" content="width=device-width, initial-scale=1.0, maximun-scale=1.0, user-scalable=no" />
-        <meta charset="utf-8" />
-
-        <!--CSS style sheet -->
-        <link rel="stylesheet" type="text/css" media="screen" href="../libs/bootstrap.min.css" />
-        <link rel="stylesheet" type="text/css" media="screen" href="../css/webclient.css" />
-        <link rel="stylesheet" type="text/css" media="screen" href="../css/goods.css" />
-    </head>
-    <body>
-        <div class="modal-header">
-            <button type="button" id="close_box" class="close">×</button>
-            <h4 id="header" class="modal-title">
-                <span id="name"></span>
-                <span id="number_mark">×</span>
-				<span id="number"></span>
-            </h4>
-        </div>
-        <div class="modal-body">
-            <div id="div_icon">
-                <img id="img_icon" src="" />
-            </div>
-            <p id="goods_price">
-				<span id="price"></span>
-				<span id="unit"></span>
-            </p>
-            <p id="desc"></p>
-        </div>
-        <div id="popup_footer" class="modal-footer">
-            <button id="button_buy" type="button" class="btn btn-default">Buy</button>
-        </div>
-
-        <script src="../libs/jquery-3.2.1.min.js" defer="defer" type="text/javascript" charset="utf-8"></script>
-        <script src="../controllers/base_controller.js" defer="defer" type="text/javascript" charset="utf-8"></script>
-        <script src="../controllers/muddery_goods.js" defer="defer" type="text/javascript" charset="utf-8"></script>
-        <script src="../client/frames.js" defer="defer" type="text/javascript" charset="utf-8"></script>
-        <script src="../client/importer.js" defer="defer" type="text/javascript" charset="utf-8"></script>
-    </body>
-</html>
+<div class="modal-header">
+	<button type="button" id="goods_close_box" class="close">×</button>
+	<h4 id="goods_header" class="modal-title">
+		<span id="goods_name"></span>
+		<span id="goods_number_mark">×</span>
+		<span id="goods_number"></span>
+	</h4>
+</div>
+<div class="modal-body">
+	<div id="goods_div_icon">
+		<img id="goods_img_icon" src="" />
+	</div>
+	<p id="goods_price">
+		<span id="goods_price"></span>
+		<span id="goods_unit"></span>
+	</p>
+	<p id="goods_desc"></p>
+</div>
+<div id="goods_popup_footer" class="modal-footer">
+	<button id="goods_button_buy" type="button" class="btn btn-default">Buy</button>
+</div>
