--- a/muddery/web/webclient/webclient/views/map.html
+++ b/muddery/web/webclient/webclient/views/map.html
@@ -1,28 +1,9 @@
-<!DOCTYPE html>
-<html lang="en-us">
-    <head>
-        <meta name="viewport" content="width=device-width, initial-scale=1.0, maximun-scale=1.0, user-scalable=no" />
-        <meta charset="utf-8" />
-
-        <!--CSS style sheet -->
-        <link rel="stylesheet" type="text/css" media="screen" href="../libs/bootstrap.min.css" />
-        <link rel="stylesheet" type="text/css" media="screen" href="../css/webclient.css" />
-        <link rel="stylesheet" type="text/css" media="screen" href="../css/map.css" />
-    </head>
-    <body>
-        <div class="modal-header">
-            <button type="button" id="close_box" class="close">×</button>
-            <h4 id="name" class="modal-title"></h4>
-        </div>
-        <div class="modal-body">
-            <svg id="map_svg"></svg>
-        </div>
-
-        <script src="../libs/jquery-3.2.1.min.js" defer="defer" type="text/javascript" charset="utf-8"></script>
-        <script src="../libs/d3.v3.min.js" defer="defer" type="text/javascript" charset="utf-8"></script>
-    	<script src="../controllers/base_controller.js" defer="defer" type="text/javascript" charset="utf-8"></script>
-        <script src="../controllers/muddery_map.js" defer="defer" type="text/javascript" charset="utf-8"></script>
-        <script src="../client/frames.js" defer="defer" type="text/javascript" charset="utf-8"></script>
-        <script src="../client/importer.js" defer="defer" type="text/javascript" charset="utf-8"></script>
-    </body>
-</html>
+<div id="map_body">
+	<div class="modal-header">
+		<button type="button" id="map_close_box" class="close">×</button>
+		<h4 id="map_name" class="modal-title"></h4>
+	</div>
+	<div class="modal-body">
+		<svg id="map_svg"></svg>
+	</div>
+</div>
