--- a/muddery/web/webclient/webclient/views/object.html
+++ b/muddery/web/webclient/webclient/views/object.html
@@ -1,33 +1,13 @@
-<!DOCTYPE html>
-<html lang="en-us">
-    <head>
-        <meta name="viewport" content="width=device-width, initial-scale=1.0, maximun-scale=1.0, user-scalable=no" />
-        <meta charset="utf-8" />
-
-        <!--CSS style sheet -->
-        <link rel="stylesheet" type="text/css" media="screen" href="../libs/bootstrap.min.css" />
-        <link rel="stylesheet" type="text/css" media="screen" href="../css/webclient.css" />
-        <link rel="stylesheet" type="text/css" media="screen" href="../css/object.css" />
-    </head>
-    <body>
-        <div class="modal-header">
-            <button type="button" id="close_box" class="close">×</button>
-            <h4 id="popup_header" class="modal-title"></h4>
-        </div>
-        <div class="modal-body">
-            <div id="div_icon">
-                <img id="img_icon" src="" />
-            </div>
-            <p id="popup_body"></p>
-        </div>
-        <div id="popup_footer" class="modal-footer">
-            <button type="button" class="btn btn-default template"></button>
-        </div>
-
-        <script src="../libs/jquery-3.2.1.min.js" defer="defer" type="text/javascript" charset="utf-8"></script>
-        <script src="../controllers/base_controller.js" defer="defer" type="text/javascript" charset="utf-8"></script>
-        <script src="../controllers/muddery_object.js" defer="defer" type="text/javascript" charset="utf-8"></script>
-        <script src="../client/frames.js" defer="defer" type="text/javascript" charset="utf-8"></script>
-        <script src="../client/importer.js" defer="defer" type="text/javascript" charset="utf-8"></script>
-    </body>
-</html>
+<div class="modal-header">
+	<button type="button" id="object_close_box" class="close">×</button>
+	<h4 id="object_popup_header" class="modal-title"></h4>
+</div>
+<div class="modal-body">
+	<div id="object_div_icon">
+		<img id="object_img_icon" src="" />
+	</div>
+	<p id="object_popup_body"></p>
+</div>
+<div id="object_popup_footer" class="modal-footer">
+	<button type="button" class="btn btn-default template"></button>
+</div>
