Modify the web client.

--- a/muddery/web/webclient/webclient/css/combat_result.css
+++ b/muddery/web/webclient/webclient/css/combat_result.css
@@ -1,8 +1,8 @@
 
-#combat_result_header {
+#frame_combat_result #combat_result_header {
     text-align: center;
 }
 
-#combat_result_buttons {
+#frame_combat_result #combat_result_buttons {
     text-align: center;
 }
