--- a/muddery/web/webclient/webclient/views/scene.html
+++ b/muddery/web/webclient/webclient/views/scene.html
@@ -1,4 +1,4 @@
-<div id="box_scene">
+<div id="scene_box_scene">
 	<div id="scene_name">
 		&gt;&gt;&gt;&gt;&gt; <span id="scene_name_content"></span>  &lt;&lt;&lt;&lt;&lt;
 	</div>
