--- a/muddery/web/webclient/webclient/css/information.css
+++ b/muddery/web/webclient/webclient/css/information.css
@@ -1,9 +1,9 @@
 
-#info_popup_icon {
+#frame_information #info_popup_icon {
     text-align: center;
 }
 
-#info_obj_icon {
+#frame_information #info_obj_icon {
 	width: 40px;
 	height: 40px;
 }
