--- a/muddery/web/webclient/webclient/css/quests.css
+++ b/muddery/web/webclient/webclient/css/quests.css
@@ -1,5 +1,5 @@
 
-#tab_quests {
+#frame_quests #tab_quests {
     border-collapse: collapse;
     border-color: #aaa;
     border-style: solid;
@@ -7,7 +7,7 @@
     margin: 8px;
 }
 
-#tab_quests th {
+#frame_quests #tab_quests th {
     border-width: 1px;
     border-style: solid;
     border-color: #aaa;
@@ -15,18 +15,18 @@
     font-weight: normal;
 }
 
-#tab_quests td {
+#frame_quests #tab_quests td {
     border-width: 1px;
     border-style: solid;
     border-color: #aaa;
     padding: 4px 8px 4px 8px;
 }
 
-.img_icon {
+#frame_quests .img_icon {
 	width: 30px;
 	height: 30px;
 }
 
-td>p {
+#frame_quests td>p {
     margin: 0;
 }
