Modify the webclient.

--- a/muddery/web/webclient/webclient/views/combat.html
+++ b/muddery/web/webclient/webclient/views/combat.html
@@ -7,7 +7,7 @@
 	<div class="template">
 		<div class="status"></div>
 		<div class="div_icon">
-			<img class="img_icon" src="" />
+			<img class="img_icon"/>
 		</div>
 		<div class="name"></div>
 	</div>
@@ -18,7 +18,7 @@
 <div id="combat_buttons" class="modal-footer">
 	<button class="btn_combat template" type="button">
 		<center>
-			<img class="command_icon" src="">
+			<img class="command_icon">
 		</center>
 		<div class="command_name"></div>
 		<div class="cooldown"></div>
