--- a/muddery/web/webclient/webclient/views/goods.html
+++ b/muddery/web/webclient/webclient/views/goods.html
@@ -8,7 +8,7 @@
 </div>
 <div class="modal-body">
 	<div id="goods_div_icon">
-		<img id="goods_img_icon" src="" />
+		<img id="goods_img_icon"/>
 	</div>
 	<p id="goods_price">
 		<span id="goods_price"></span>
