--- a/muddery/web/webclient/webclient/views/information.html
+++ b/muddery/web/webclient/webclient/views/information.html
@@ -6,7 +6,7 @@
 					<div id="info_box_status">
 						<div>
 							<div>
-								<img id="info_obj_icon" src="" />
+								<img id="info_obj_icon"/>
 								<span id="info_name"></span>
 							</div>
 							<div id="info_attributes">
