--- a/muddery/web/webclient/webclient/views/inventory.html
+++ b/muddery/web/webclient/webclient/views/inventory.html
@@ -12,7 +12,7 @@
 				<tr class="template">
 					<td>
 						<div class="obj_icon">
-							<img class="img_icon" src="" />
+							<img class="img_icon"/>
 						</div>
 						<a class="obj_name"></a>
 					</td>
