--- a/muddery/web/webclient/webclient/views/object.html
+++ b/muddery/web/webclient/webclient/views/object.html
@@ -4,7 +4,7 @@
 </div>
 <div class="modal-body">
 	<div id="object_div_icon">
-		<img id="object_img_icon" src="" />
+		<img id="object_img_icon"/>
 	</div>
 	<p id="object_popup_body"></p>
 </div>
