--- a/muddery/web/webclient/webclient/views/shop.html
+++ b/muddery/web/webclient/webclient/views/shop.html
@@ -4,7 +4,7 @@
 </div>
 <div class="modal-body">
 	<div id="shop_icon">
-		<img id="shop_img_icon" src="" />
+		<img id="shop_img_icon"/>
 	</div>
 	<div id="shop_desc"></div>
 	<div id="shop_goods_wrapper">
@@ -20,7 +20,7 @@
 				<tr class="template">
 					<td>
 						<center class="goods_icon">
-							<img class="img_icon" src="" />
+							<img class="img_icon"/>
 						</center>
 						<a class="goods_name"></a>
 					</td>
