--- a/muddery/web/webclient/webclient/views/skills.html
+++ b/muddery/web/webclient/webclient/views/skills.html
@@ -11,7 +11,7 @@
                 <tr class="template">
                     <td>
                         <div class="skill_icon">
-                            <img class="img_icon" src="" />
+                            <img class="img_icon"/>
                         </div>
                         <a class="skill_name"></a>
                     </td>
