--- a/muddery/web/webclient/webclient/views/dialogue.html
+++ b/muddery/web/webclient/webclient/views/dialogue.html
@@ -4,7 +4,7 @@
 </div>
 <div class="modal-body">
 	<div id="dlg_div_icon">
-		<img id="dlg_img_icon" src="" />
+		<img id="dlg_img_icon"/>
 	</div>
 	<div id="dialogue_body">
 		<div id="dialogue_content"></div>
