Fix some bugs in the webclient. Use localstorage instead of cookie.

--- a/muddery/web/webclient/webclient/views/goods.html
+++ b/muddery/web/webclient/webclient/views/goods.html
@@ -10,7 +10,7 @@
 	<div id="goods_div_icon">
 		<img id="goods_img_icon"/>
 	</div>
-	<p id="goods_price">
+	<p id="goods_div_price">
 		<span id="goods_price"></span>
 		<span id="goods_unit"></span>
 	</p>
