--- a/muddery/web/webclient/webclient/views/quick_login.html
+++ b/muddery/web/webclient/webclient/views/quick_login.html
@@ -1,4 +1,4 @@
- <div id="box_login">
+ <div id="box_quick_login">
     <div id="quick_login_view_header">Please login.</div>
     <table>
         <tbody>
