Modify the worldeditor.

--- a/muddery/worlddata/view/main.html
+++ b/muddery/worlddata/view/main.html
@@ -45,7 +45,7 @@
                     <div id="collapseListGroup1" class="panel-collapse collapse" role="tabpanel" aria-labelledby="collapseListGroupHeading1">
                         <ul class="list-group">
                           <li class="list-group-item">
-                            <button class="menu-item-left" type="button" onclick="showConent('home.html')">
+                            <button class="menu-item-left" type="button" onclick="showConent('common_table.html?table=game_settings')">
                                 游戏设置
                             </button>
                           </li>
